<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.acadgild.balu.acd_an_session_8_assignment_4_main.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:id="@+id/editText_write_data"
        android:hint="@string/text_hint"
        android:background="@drawable/edittextstyle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/activity_horizontal_margin"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_data"
        android:textStyle="bold"
        android:id="@+id/button_write_data"
        android:layout_below="@id/editText_write_data"
        android:textAllCaps="false"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_data"
        android:id="@+id/button_clear_data"
        android:layout_below="@+id/button_write_data"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_file"
        android:id="@+id/button_delete_file"
        android:textStyle="bold"
        android:layout_below="@id/button_write_data"
        android:layout_toRightOf="@+id/button_clear_data"
        android:layout_toEndOf="@+id/button_clear_data"
        android:layout_alignBaseline="@id/button_clear_data"
        android:textAllCaps="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/textView_read_data_label"
        android:textStyle="bold"
        android:text="@string/label"
        android:layout_below="@+id/button_clear_data"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_read_data"
        android:layout_below="@+id/textView_read_data_label"
         />

</RelativeLayout>
